# ecom-microservices

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  ideas.md  package-lock.json
.cursor/plans/: backend_microservices_implementation_fc63831d.plan.md  catalog_api_frontend_integration_b8dd52f4.plan.md
.cursor/rules/: ensure-runnable-code.mdc  repo-structure.mdc
.cursor/skills/frontend-for-backend/: SKILL.md
.tmp/: frontend-index.html  index-WHFa6_Dr.js
docs/: api-contracts.md  architecture.md  deployment.md  event-flows.md
frontend/: .dockerignore  .env.example  Dockerfile  bun.lockb  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: routeTree.gen.ts  server.ts  styles.css
frontend/src/components/: ProductCard.tsx  SiteFooter.tsx  SiteHeader.tsx
frontend/src/lib/: catalogApi.ts  products.ts
frontend/src/routes/: __root.tsx  cart.tsx  checkout.tsx  index.tsx  orders.$id.tsx  orders.tsx  product.$id.tsx
frontend/src/store/: cart.tsx  orders.ts
infra/monitoring/: prometheus.yml
infra/monitoring/grafana/provisioning/dashboards/: dashboard.yml
infra/nginx/: nginx.conf
infra/nginx/conf.d/: default.conf
infra/postgres/init/: 001-create-databases.sql
infra/rabbitmq/: definitions.json
infra/redis/: redis.conf
scripts/: dev-down.sh  dev-up.sh  init-databases.sh  lint-all.sh  migrate-all.sh  migrate-service.sh  smoke-test.sh  test-all.sh
services/: README.md
services/auth-service/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  setup-dev.sh  test.db
services/auth-service/app/: database.py  dependencies.py  main.py
services/auth-service/app/core/: config.py  security.py
services/auth-service/app/models/: __init__.py  user.py
services/auth-service/app/routers/: __init__.py  auth.py  health.py
services/auth-service/app/schemas/: __init__.py  auth.py
services/auth-service/migrations/: env.py  script.py.mako
services/auth-service/tests/: test_auth.py
services/cart-service/: .env.example  alembic.ini  entrypoint.sh  pyproject.toml
services/cart-service/migrations/: env.py
services/catalog-service/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/catalog-service/app/: database.py  main.py
services/catalog-service/app/core/: cache.py  config.py
services/catalog-service/app/models/: __init__.py  category.py  product.py
services/catalog-service/app/repositories/: __init__.py  base.py  category.py  product.py
services/catalog-service/app/routers/: categories.py  health.py  products.py
services/catalog-service/app/schemas/: __init__.py  category.py  product.py
services/catalog-service/migrations/: env.py
services/catalog-service/migrations/versions/: 001_create_categories_and_products.py
services/catalog-service/tests/: test_categories.py  test_health.py  test_products.py
services/gateway-service/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  coverage.xml  entrypoint.sh  pyproject.toml  troubleshooting.md
services/gateway-service/app/: __init__.py  dependencies.py  main.py
services/gateway-service/app/core/: __init__.py  config.py  service_registry.py
services/gateway-service/app/middleware/: __init__.py  auth.py  rate_limit.py
services/gateway-service/app/routers/: __init__.py  health.py  proxy.py
services/gateway-service/app/schemas/: __init__.py
services/gateway-service/tests/: __init__.py  test_health.py
services/inventory-service/: .env.example  alembic.ini  entrypoint.sh  pyproject.toml
services/inventory-service/migrations/: env.py
services/notification-service/: .env.example  entrypoint.sh  pyproject.toml
services/order-service/: .env.example  alembic.ini  entrypoint.sh  pyproject.toml
services/order-service/migrations/: env.py
shared/contracts/events/: order-created.json  order-status-updated.json  stock-reserved.json
shared/scripts/: seed-data.py  wait-for-it.sh
