[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inventory-service"
version = "0.1.0"
description = "Inventory service for stock and reservations"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg>=3.1.13",
    "alembic>=1.12.1",
    "aio-pika>=9.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
